force-app/main/default/objects/ssot__ClaimDiagnosis__dlm/fields/ssot__ClaimDiagnosis_ClaimId_map_Claim_Id_N_1__c.field-meta.xml
<CustomField>
    <fullName>ssot__ClaimDiagnosis_ClaimId_map_Claim_Id_N_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ClaimDiagnosis_ClaimId_map_Claim_Id_N_1</label>
    <referenceTo>ssot__Claim__dlm</referenceTo>
    <relationshipLabel>ClaimDiagnosis_ClaimId_map_Claim_Id_N_1</relationshipLabel>
    <relationshipName>ClaimDiagnosis_ClaimId_map_Claim_Id_N_1</relationshipName>
    <type>Lookup</type>
</CustomField>