force-app/main/default/objects/ssot__ClaimDiagnosis__dlm/fields/ssot__DiagnosisReferenceObject__c.field-meta.xml
<CustomField>
    <fullName>ssot__DiagnosisReferenceObject__c</fullName>
    <label>Diagnosis Reference Object</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>DiagnosisReferenceObject</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>