force-app/main/default/objects/ssot__ClaimDiagnosis__dlm/fields/ssot__rel_1731659063260_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1731659063260_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ClaimDiagnosis_DiagnosisReferenceRec_rel</label>
    <referenceTo>ssot__PatientHealthCondition__dlm</referenceTo>
    <relationshipLabel>ClaimDiagnosis_DiagnosisReferenceRec_rel</relationshipLabel>
    <relationshipName>rel_1731659063260_end</relationshipName>
    <type>Lookup</type>
</CustomField>